enabled real-time bidirectional event-based communication

--- a/view/index.html
+++ b/view/index.html
@@ -84,6 +84,9 @@
 
                     })
 
+                var socket = io.connect();
+                socket.on("updateData", data => this.setState({ persons: data }));
+
 
             }
 
