--- a/view/index.html
+++ b/view/index.html
@@ -10,7 +10,7 @@
             font-family: arial, sans-serif;
         }
 
-        #cryptos {
+        #students {
             text-align: center;
             font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
             border-collapse: collapse;
@@ -18,21 +18,21 @@
             width: 100%;
         }
 
-        #cryptos td,
-        #cryptos th {
+        #students td,
+        #students th {
             border: 1px solid #ddd;
             padding: 8px;
         }
 
-        #cryptos tr:nth-child(even) {
+        #students tr:nth-child(even) {
             background-color: #f2f2f2;
         }
 
-        #cryptos tr:hover {
+        #students tr:hover {
             background-color: #ddd;
         }
 
-        #cryptos th {
+        #students th {
             padding-top: 12px;
             padding-bottom: 12px;
             text-align: center;
@@ -56,7 +56,7 @@
 
     <!-- Load our React component. -->
     <div id="root"></div>
-
+    <script src="/socket.io/socket.io.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.2/react-dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.21.1/babel.min.js"></script>
@@ -72,27 +72,27 @@
 
 
             state = {
-                cryptos: []
+                datos: []
             }
 
             componentDidMount() {
 
                 axios.get(`/crypto`)
                     .then(res => {
-                        const cryptos = res.data;
-                        this.setState({ cryptos });
+                        const datos = res.data;
+                        this.setState({ datos });
 
                     })
 
+                const { endpoint } = this.state;
                 var socket = io.connect();
-                socket.on("updateData", data => this.setState({ persons: data }));
-
+                socket.on("updateData", data => this.setState({ datos: data }));
 
             }
 
             renderTableData() {
-                return this.state.cryptos.map((crypto, index) => {
-                    const { id, name, quote } = crypto;
+                return this.state.datos.map((data, index) => {
+                    const { id, name, quote } = data;
 
                     const price = quote.EUR.price;
                     const last_updated = quote.EUR.last_updated;
@@ -110,7 +110,7 @@
             renderTableHeader() {
                 let header = ["id", "nombre", "precio", "hora_ultima_actualizacion"]
                 return header.map((key, index) => {
-
+                    console.log(key)
                     return <th key={index}>{key}</th>
                 })
             }
@@ -119,7 +119,7 @@
                 return (
                     <div>
                         <h1 id='title'>PRECIOS CRIPTOMONEDAS</h1>
-                        <table id='cryptos'>
+                        <table id='students'>
                             <tbody>
                                 <tr>{this.renderTableHeader()}</tr>
                                 {this.renderTableData()}
